--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "uc-cardgames-ui",
+  "homepage": "https://www.andrewaz.com/uc-cardgames-ui/",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -8,6 +9,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@fullhuman/postcss-purgecss": "^2.3.0",
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
@@ -25,6 +27,8 @@
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-vue": "^6.2.2",
     "prettier": "^1.19.1",
+    "gh-pages": "^3.1.0",
+    "tailwindcss": "^1.4.6",
     "vue-template-compiler": "^2.6.11"
   }
 }
